# potential-octo-computing-machine

./: .env.example  .gitignore  AGENT_PROMPT_TEMPLATE.md  COMPLETION_SUMMARY.md  E2E_TESTS_IMPLEMENTATION.md  FEATURE_COMPLETION_PLAN.md  GROUP_10_IMPLEMENTATION.md  GROUP_4_IMPLEMENTATION_SUMMARY.md  GROUP_5_IMPLEMENTATION_STATUS.md  GROUP_8_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GROUPS.md  IMPLEMENTATION_GUIDE_AUTH_FEATURES.md  IMPLEMENTATION_GUIDE_VIDEO_EXPORT.md  IMPLEMENTATION_TASKS.md  PRD.md  PROJECT_STATUS_UPDATE.md  README.md  REPORTS_INDEX.md  SPEC_VERIFICATION_REPORT.md  TEST-SUITE-SUMMARY.md  TRANSCRIPTION_OPTIMIZATION_REPORT.md  UI_TEAM_API_REFERENCE.md  VERIFICATION_REPORT.md  VIDEO_ENDPOINTS_VERIFICATION_REPORT.md  docker-compose.yml
.claude/: CLAUDE.md  (+3 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7224904a41f3_create_users_table.py  abc123def456_create_videos_and_transcripts_tables.py  add_advanced_editor_models.py  add_subtitle_tables.py  add_team_collaboration_tables.py  add_thumbnail_url_to_videos.py  create_batch_tables.py  create_clips_table.py  create_exports_table.py  create_highlights_table.py  (+3 more)
backend/app/: __init__.py  main.py  worker.py
backend/docs/: authentication-api.md  authentication-flow.md  authentication-verification-report.md
backend/scripts/: seed_social_media_templates.py
backend/tests/: README.md  conftest.py  test_api_auth.py  test_api_silence.py  test_api_timeline.py  test_api_transcript.py  test_api_video.py  test_api_video_enhanced.py  test_composition_service.py  test_core_security.py  test_models_export.py  test_models_highlight.py  test_models_subtitle.py  test_models_template.py  test_models_transcript.py  test_models_video.py  test_services_auth.py  test_services_s3.py  test_services_silence_removal.py  test_services_transcription.py  test_services_video_metadata.py  test_worker_metadata.py
(+384 files in other folders)
